# release-integration

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  flake.nix  pre-1.0-cliff.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release.yaml  test.yaml
crates/integration/: Cargo.toml
crates/integration/src/: lib.rs
crates/integration/tests/: all_together.rs  changelog.rs  publish.rs  semver_checks.rs  set_version.rs
crates/release_util/: Cargo.toml
crates/release_util/src/: generate_release.rs  lib.rs  prepare_release.rs  publish_release.rs  utils.rs
scripts/: run_setup.sh  setup_crates.sh  setup_git.sh
