[workspace]
members = [
    "crates/integration",
    "crates/release_util"
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# utility dependencies
clap = "4.5"

# dependencies for integration tests
tempfile = "3.20"
git2 = "0.20"
nanoid = "0.4"
serde_json = "1.0"
