[workspace]
members = [
    "crates/integration",
    "crates/release_util"
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
homepage = "https://www.holochain.org/"
repository = "https://github.com/holochain/release-integration"
categories = ["development-tools"]

[workspace.dependencies]
# utility dependencies
clap = "4.5"
anyhow = "1.0"
git2 = "0.20"
serde_json = "1.0"
url = "2.5"
semver = "1.0"
toml = "0.8"

# self dependencies
holochain_release_util = { version = "0.1.0", path = "crates/release_util" }

# dependencies for integration tests
tempfile = "3.20"
nanoid = "0.4"
