[package]
name = "release_util"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
default-run = "release-util"

[dependencies]
clap = { workspace = true, features = ["derive"] }
anyhow.workspace = true
git2 = { workspace = true, features = ["vendored-openssl", "vendored-libgit2"] }
serde_json.workspace = true
url.workspace = true
semver.workspace = true
toml.workspace = true
