[package]
name = "holochain_release_util"
version = "0.1.0"
description = "Utility crate for Holochain release management"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

default-run = "holochain_release_util"

[dependencies]
clap = { workspace = true, features = ["derive"] }
anyhow.workspace = true
git2 = { workspace = true, features = ["vendored-openssl", "vendored-libgit2"] }
serde_json.workspace = true
url.workspace = true
semver.workspace = true
toml.workspace = true
